@@ -1,4 +1,8 @@
-﻿w17 11.03.2015 15:50:45 +0300 - build 4302
+﻿drkns 11.03.2015 20:07:31 +0200 - build 4303
+
+1. Уточнение 4298.
+
+w17 11.03.2015 15:50:45 +0300 - build 4302
 
 1. Устранение запроса повышения привилегий при посмотре файла на флэшке с NTFS под Win Server 2008 R2 SP1
 
